# forge

./: latest.json  package-lock.json  package.json
.claude/: launch.json
.github/workflows/: release.yml
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: chrome_automation.rs  download_watcher.rs  forge_downloads.rs  lib.rs  main.rs
src/components/Actions/: CreativeActions.css  CreativeActionsPanel.tsx
src/data/: codexSeed.ts
src/hooks/: albumCompanion.ts  albumProduction.ts  blueprints.ts  browserAutomation.ts  browserSessionResolver.ts  candidateImport.ts  chief.ts  creativeActions.ts  creativeHistory.ts  creativePipeline.ts  creativeSession.ts  discoveryEngine.ts  downloadWatcher.ts  executionProviders.ts  folderImport.ts  forgeDownloads.ts  generationRequest.ts  importFramework.ts  lyricPromptSuggestions.ts  markdownImport.ts  musicWorkspace.ts  obsidianImport.ts  opportunityEngine.ts  perspectiveLayer.ts  producerCompanion.ts  promptCoach.ts  promptComposition.ts  promptDeliveryEngine.ts  relationshipDiscovery.ts  releaseManifest.ts  trackQueueAttribution.ts  trackWorkspace.ts  translationEngine.ts  useActivity.ts  useAssets.ts  useCandidatePlayback.ts  useCandidates.ts  useCaptures.ts  useCommandPalette.ts  useIdentities.ts  (+11 more)
src/native/: nativeFolderSource.ts
src/providers/: chromeAutomationTarget.ts  registerBrowserAutomationTargets.ts  registerProviders.ts  sunoServiceAdapter.ts
src/utils/: formatDate.ts  objectTypeIcons.ts  truncateText.ts
(+140 files in other folders)
