[package]
name = "forge-studio"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "forge_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Chrome Automation Target's own dependencies (src/chrome_automation.rs) —
# nothing above the Browser Automation Framework's frozen TS contract
# needs to know either exists. ureq is a small, synchronous HTTP client
# (no async runtime of its own required) used for the plain HTTP CDP
# endpoints (/json/version, /json/list, /json/activate). tungstenite is
# the synchronous counterpart for the one CDP command that has no plain
# HTTP equivalent — Page.navigate — sent over a tab's own WebSocket
# debugger connection.
ureq = { version = "2", features = ["json"] }
tungstenite = "0.24"

